# ai-interview-1

./: .gitignore  README.md  generate_sample_data.py  pyproject.toml  requirements.txt
app/: __init__.py  config.py  crypto.py  database.py  key_service.py  logging_config.py  main.py  models.py  validation_service.py
docs/: CHALLENGE.md
tests/: __init__.py  test_crypto.py  test_key_service.py  test_validation.py
